[project]
name = "mapillary-tools"
version = "0.12.1"
description = "Mapillary Image/Video Import Pipeline"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "appdirs>=1.4.4,<2.0.0",
    "construct>=2.10.0,<3.0.0",
    "exifread==2.3.2",
    "gpxpy>=1.5.0,<1.6.0",
    "jsonschema~=4.17.3",
    "piexif==1.1.3",
    "pynmea2>=1.12.0,<2.0.0",
    "requests[socks]>=2.20.0,<3.0.0",
    "rich-click>=1.8.5",
    "tqdm>=4.0,<5.0",
    "typing-extensions>=4.12.2",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pyinstaller>=6.11.1",
    "pyre-check>=0.9.23",
    "pytest>=8.3.4",
    "ruff>=0.8.3",
    "shapely>=2.0.7",
    "types-appdirs>=1.4.3.5",
    "types-requests>=2.32.0.20241016",
    "usort",
]
